# galacto

./: .cursorignore  .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  rust-toolchain.toml  server.js  worker.js  wrangler.toml
.github/workflows/: ci-cd.yml
.husky/: pre-commit
scripts/: cache-buster.js
src/: camera.rs  graphics.rs  input.rs  lib.rs  render.rs  simulation.rs  utils.rs
src/shaders/: render.wgsl  update.wgsl
static/: _headers  index.html  styles.css
