[package]
name = "galaxy-sim"
version = "0.1.0"
edition = "2021"
authors = ["Robert Gilks <robert@example.com>"]
description = "A GPU-accelerated black hole accretion disk simulation in Rust with WebGPU"
license = "MIT"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wgpu = { version = "24.0", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "Element",
    "HtmlElement",
    "Event",
    "MouseEvent",
    "WheelEvent",
    "KeyboardEvent",
    "CanvasRenderingContext2d",
    "WebGlRenderingContext",
    "console",
    "CssStyleDeclaration",
    "HtmlInputElement",
] }
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }
cfg-if = "1.0"
log = "0.4"
cgmath = "0.18"
bytemuck = { version = "1.0", features = ["derive"] }
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
raw-window-handle = "0.6"

# Future multithreading support (commented out initially for compatibility)
# rayon = "1.8"
# wasm-bindgen-rayon = { version = "1.2", features = ["no-bundler"] }

[features]
default = []
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies.console_log]
version = "1.0"
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "1.0"
raw-window-handle = { version = "0.6", features = ["wasm-bindgen-0-2"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.3"
env_logger = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
